Publishing updated achievement

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@ Unlocked        1/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4 achievements
+   5 symbolic-ref
+   5 rev-parse
+   5 achievements
+   3 remote
    1 config
 </pre>
 <script type="text/javascript">
