--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 <body>
 
 <h2>mathieuravaux's Git Achievements</h2>
-Unlocked        1/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 1 points<br>
+Unlocked        2/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 3 points<br>
 <ul>
+<li><div class="title">Apprentice Web Designer (Level 1)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   5 symbolic-ref
-   5 rev-parse
-   5 achievements
+   8 symbolic-ref
+   8 rev-parse
+   6 achievements
    3 remote
+   2 instaweb
    1 config
 </pre>
 <script type="text/javascript">
@@ -80,6 +82,5 @@ There are       50 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
 <li><div class="title">Tree Trimmer</div><div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
 <li><div class="title">Weaver</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a></div></li>
-<li><div class="title">Web Designer</div><div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 </ul></div>
 </body></html>
