--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
 <body>
 
 <h2>mathieuravaux's Git Achievements</h2>
-Unlocked        3/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 4 points<br>
+Unlocked        4/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 6 points<br>
 <ul>
+<li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Web Designer (Level 1)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  21 symbolic-ref
-  21 rev-parse
-   7 config
+  31 symbolic-ref
+  31 rev-parse
+  11 config
    6 achievements
    3 remote
    2 instaweb
+   2 init
+   1 up
    1 st
 </pre>
 <script type="text/javascript">
@@ -36,7 +39,6 @@ function showLocked() {
 <div id="locked">
 There are       50 Achievements. Some achievements can be leveled up depending on the number of times it is used (Used 2 times = level 1, 4 = level 2, 8 = level 3, 16 = level 4, 32 = level 5, etc)
 <ul>
-<li><div class="title">Architect</div><div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Author</div><div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Banker</div><div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
