--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
 <body>
 
 <h2>mathieuravaux's Git Achievements</h2>
-Unlocked        4/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 6 points<br>
+Unlocked        4/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 9 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
+<li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Web Designer (Level 1)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  31 symbolic-ref
-  31 rev-parse
+ 841 rev-parse
+ 812 symbolic-ref
   11 config
    6 achievements
-   3 remote
+   5 status
+   4 up
+   4 remote
+   4 init
+   2 rebase
    2 instaweb
-   2 init
-   1 up
+   2 add
    1 st
+   1 push
+   1 pul
 </pre>
 <script type="text/javascript">
 function showLocked() {
