--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
 <h2>mathieuravaux's Git Achievements</h2>
-Unlocked        5/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 13 points<br>
+Unlocked        6/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 15 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
+<li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Web Designer (Level 1)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -21,19 +22,20 @@ Unlocked        5/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 843 rev-parse
- 814 symbolic-ref
+ 939 rev-parse
+ 910 symbolic-ref
+  11 status
   11 config
    6 achievements
-   5 status
+   5 init
    4 up
+   4 st
    4 remote
-   4 init
+   4 diff
    3 add
-   2 st
    2 rebase
+   2 push
    2 instaweb
-   1 push
    1 pul
 </pre>
 <script type="text/javascript">
@@ -85,7 +87,6 @@ There are       50 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Presenter</div><div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Product Manager</div><div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress</div><div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
-<li><div class="title">Socialite</div><div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stamp Collector</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a> --date=relative</div></li>
 <li><div class="title">Thug</div><div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
