--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
 
 <h2>mathieuravaux's Git Achievements</h2>
-Unlocked        6/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 18 points<br>
+Unlocked        6/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 22 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Web Designer (Level 1)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -23,16 +24,16 @@ Unlocked        6/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 974 rev-parse
- 945 symbolic-ref
-  11 status
+1042 rev-parse
+1013 symbolic-ref
+  12 status
   11 config
+   8 push
    6 achievements
    5 init
    4 up
    4 st
    4 remote
-   4 push
    4 diff
    3 add
    2 rebase
