--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
 <h2>mathieuravaux's Git Achievements</h2>
-Unlocked        6/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 22 points<br>
+Unlocked        7/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 24 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
+<li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -24,17 +25,17 @@ Unlocked        6/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1042 rev-parse
-1013 symbolic-ref
-  12 status
+1301 rev-parse
+1272 symbolic-ref
+  16 status
+  13 push
   11 config
-   8 push
    6 achievements
+   5 remote
    5 init
+   5 diff
    4 up
    4 st
-   4 remote
-   4 diff
    3 add
    2 rebase
    2 instaweb
@@ -79,7 +80,6 @@ There are       50 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Let there be light</div><div class="info">Commit without a parent.</div></li>
 <li><div class="title">Librarian</div><div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Locksmith</div><div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
-<li><div class="title">Merchant</div><div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Messenger</div><div class="info">Applied a patch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-am.html">git-am</a>.</div></li>
 <li><div class="title">Miller</div><div class="info">Add only part of a file to the stage X times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">News Reader</div><div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
