--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>mathieuravaux's Git Achievements</h2>
-Unlocked        9/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 32 points<br>
+Unlocked        9/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 38 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -24,28 +24,36 @@ Unlocked        9/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-1342 rev-parse
-1313 symbolic-ref
-  17 status
-  16 push
+1817 rev-parse
+1780 symbolic-ref
+  32 status
+  32 push
+  17 up
+  16 diff
+  11 st
   11 config
    8 remote
+   6 checkout
    6 achievements
-   5 st
    5 init
-   5 diff
-   4 up
-   4 add
-   2 rebase
+   5 add
+   3 stash
+   3 rebase
+   3 fetch
+   3 branches
+   2 submodule
    2 instaweb
-   2 fetch
-   2 checkout
+   2 clone
+   2 branch
+   1 rm
+   1 pull
    1 pul
-   1 branches
+   1 co
 </pre>
 <script type="text/javascript">
 function showLocked() {
