--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>mathieuravaux's Git Achievements</h2>
-Unlocked       10/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 45 points<br>
+Unlocked       10/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 50 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -27,21 +27,22 @@ Unlocked       10/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2022 rev-parse
-1985 symbolic-ref
-  40 status
+2040 rev-parse
+2003 symbolic-ref
+  45 status
   33 push
-  22 diff
+  23 diff
   20 up
   12 st
   11 config
-   8 stash
+   9 stash
+   9 add
    8 remote
-   8 add
    6 checkout
    6 achievements
    5 init
