New achievement Apprentice Banker (Level 2)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 133 points<br>
+Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 136 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -19,6 +19,7 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -52,14 +53,14 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-9334 rev-parse
-9261 symbolic-ref
+9409 rev-parse
+9336 symbolic-ref
  351 status
- 256 push
+ 263 push
  146 diff
  143 Mer
-  98 pull
-  84 up
+ 100 pull
+  85 up
   68 add
   65 Ven
   42 st
@@ -73,20 +74,20 @@ Git commands sorted by usage:
   11 commit
   11 Jeu
   10 init
+   9 branches
+   7 co
    7 clone
    6 submodule
    6 rm
    6 fetch
-   6 co
-   6 branches
    6 achievements
    6 Lun
    5 ci
+   3 merge
    3 log
+   3 branch
    2 tag
-   2 merge
    2 instaweb
-   2 branch
    2 Sam
    1 revert
    1 reset
