New achievement Apprentice Collector (Level 3)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 139 points<br>
+Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 143 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -25,6 +25,7 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -55,35 +56,35 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-9542 rev-parse
-9469 symbolic-ref
- 353 status
- 268 push
+10339 rev-parse
+10259 symbolic-ref
+ 357 status
+ 284 push
  147 diff
  143 Mer
  101 pull
-  87 up
-  68 add
+  91 up
+  69 add
   65 Ven
-  43 st
-  40 stash
-  40 remote
-  40 checkout
-  17 Mar
-  16 config
+  53 Mar
+  45 remote
+  44 st
+  42 stash
+  41 checkout
+  22 config
   12 pul
   11 rebase
   11 commit
   11 Jeu
   10 init
    9 branches
+   9 Lun
+   8 fetch
+   8 clone
    7 co
-   7 clone
    6 submodule
    6 rm
-   6 fetch
    6 achievements
-   6 Lun
    5 ci
    3 merge
    3 log
@@ -95,6 +96,7 @@ Git commands sorted by usage:
    2 Sam
    1 revert
    1 reset
+   1 prune
    1 ignore
    1 blame
 </pre>
