New achievement Merchant (Level 4)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 160 points<br>
+Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 165 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -46,6 +46,7 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Merchant (Level 4)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 6)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -60,33 +61,33 @@ Unlocked       18/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-15356 rev-parse
-15130 symbolic-ref
- 455 status
+16558 rev-parse
+16332 symbolic-ref
+ 462 status
  347 push
  160 Mer
  157 diff
- 148 up
+ 149 up
  115 pull
- 103 Ven
-  88 add
-  82 stash
+ 110 Ven
+  90 add
+  83 stash
   58 Mar
   52 Jeu
-  48 st
-  47 remote
-  47 checkout
-  29 config
+  51 checkout
+  50 st
+  50 remote
+  31 config
   24 rm
   19 co
   18 submodule
+  17 Lun
   14 rebase
   13 commit
   13 clone
-  13 Lun
   12 pul
+  12 branches
   11 fetch
-  11 branches
   10 init
    8 ls-files
    6 merge
